# taoforge-core

./: .gitignore  Dockerfile  README.md  docker-compose.yml  min_compute.yml  pyproject.toml  requirements.txt
brand/: rsir-architecture.jsx  taoforge-brand.jsx
files/: rsir-architecture.jsx  taoforge-app.jsx
frontend_src/: BUILD.md  PROTOCOL.md  taoforge-brand.jsx
neurons/: miner.py  validator.py
scripts/: build_zk.sh  push_results.py  run_miner.sh  run_validator.sh  setup_env.sh
taoforge/: __init__.py  cli.py  forward.py  protocol.py  reward.py
taoforge/agent/: __init__.py  api_agent.py  base.py  factory.py  local_llm.py  mutator.py
taoforge/antigaming/: benchmark_rotation.py  bond_slashing.py  cross_validation.py  detector.py
taoforge/base/: config.py  miner.py  neuron.py  validator.py
taoforge/environments/: __init__.py  base.py  harness.py  subnet.py
taoforge/evaluation/: engine.py  holdout.py  results.py  rotation.py  suite.py  task.py
taoforge/mutation/: applicator.py  compound.py  lora.py  memory_index.py  pipeline.py  prompt_chain.py  tool_graph.py  types.py  validator.py
taoforge/net/: __init__.py  auth.py  client.py  dashboard.py  peer.py  server.py
taoforge/proposal/: bond.py  queue.py  schema.py  submission.py
taoforge/registry/: client.py  dag.py  lineage.py  node.py  reputation.py
taoforge/scoring/: breadth.py  formula.py  gaming.py  improvement.py  novelty.py  regression.py  weights.py
taoforge/sim/: __init__.py  __main__.py  batch.py  cli.py  reporter.py  runner.py  tui.py
taoforge/subnets/: __init__.py  adapter.py  (+7 more)
tests/: test_antigaming.py  test_evaluation.py  test_mutation.py  test_proposal.py  test_protocol.py  test_registry.py  test_reward.py  test_zk_bridge.py
zk_circuits/: Cargo.toml
zk_circuits/benches/: proof_bench.rs
zk_circuits/src/: ffi.rs  lib.rs
zk_circuits/src/circuits/: baseline.rs  improvement.rs  lineage.rs  mod.rs  non_regression.rs
zk_circuits/src/prover/: engine.rs  mod.rs
zk_circuits/src/types/: inputs.rs  mod.rs  proof.rs
zk_circuits/src/utils/: eval.rs  hash.rs  mod.rs
zk_circuits/src/verifier/: engine.rs  mod.rs
zk_circuits/tests/: integration.rs
(+10 files in other folders)
